bug fix - crash de ses morts

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/FunctionLibrary.FunctionLibraryGameMode"
+GameDefaultMap=/Game/Maps/Gameplay.Gameplay
+EditorStartupMap=/Game/Maps/Gameplay.Gameplay
+GlobalDefaultGameMode=/Game/BP_Own/BP_SideRunnerGM.BP_SideRunnerGM_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_14
